# imaging

./: .gitignore  AUTHORS  Cargo.toml  PLANS.md
.github/: copyright.sh
.github/workflows/: ci.yml
imaging/: Cargo.toml  README.md
imaging/src/: lib.rs  paint.rs  painter.rs  record.rs  render.rs  validation.rs
imaging_conformance/: Cargo.toml
imaging_conformance/src/: lib.rs
imaging_skia/: Cargo.toml  README.md
imaging_skia/src/: d3d.rs  ganesh.rs  gpu_readback.rs  lib.rs  metal.rs  sinks.rs  vulkan.rs
imaging_snapshot_tests/: Cargo.toml  README.md
imaging_snapshot_tests/scripts/: bench_cpu_release.sh
imaging_snapshot_tests/src/: lib.rs
imaging_snapshot_tests/src/cases/: blends.rs  clips.rs  filters.rs  gradients.rs  images.rs  masks.rs  mod.rs  strokes.rs  svg.rs  text.rs  util.rs
imaging_snapshot_tests/tests/: skia_snapshots.rs  tiny_skia_snapshots.rs  vello_cpu_snapshots.rs  vello_hybrid_snapshots.rs  vello_snapshots.rs
imaging_snapshot_tests/tests/common/: mod.rs
imaging_tiny_skia/: Cargo.toml  README.md
imaging_tiny_skia/src/: lib.rs
imaging_vello/: Cargo.toml  README.md
imaging_vello/src/: lib.rs  scene_sink.rs
imaging_vello_cpu/: Cargo.toml  README.md
imaging_vello_cpu/src/: lib.rs
imaging_vello_hybrid/: Cargo.toml  README.md
imaging_vello_hybrid/src/: image_registry.rs  lib.rs  scene_sink.rs
imaging_wind_tunnel/: Cargo.toml
imaging_wind_tunnel/src/: main.rs
svg_imaging/: Cargo.toml  README.md
svg_imaging/src/: diagnostics.rs  document.rs  emit.rs  lib.rs  lower.rs  plan.rs
velato_imaging/: Cargo.toml  README.md
velato_imaging/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
