[package]
name = "imaging_conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
imaging = { path = "../imaging", features = ["std"] }
kurbo.workspace = true

[lints]
workspace = true
