[package]
name = "imaging_skia"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Skia backend for the imaging command stream."
readme = "README.md"
publish = false

[dependencies]
imaging = { features = ["std"], workspace = true }
kurbo = { default-features = true, workspace = true }
peniko = { default-features = true, workspace = true }
skia-safe = { version = "0.90.0" }

[lints]
workspace = true
