[package]
name = "imaging_snapshot_tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Kompari-based snapshot tests for imaging backends."
readme = "README.md"
publish = false

[dependencies]
imaging = { features = ["std"], workspace = true }
imaging_skia = { optional = true, workspace = true }
imaging_vello = { optional = true, workspace = true }
imaging_vello_cpu = { optional = true, workspace = true }
imaging_vello_hybrid = { optional = true, workspace = true }
kurbo = { default-features = true, workspace = true }
peniko = { default-features = true, workspace = true }
skrifa = "0.40.0"
svg_imaging = { workspace = true }
vello_hybrid = { default-features = true, optional = true, version = "0.0.7" }

[lints]
workspace = true

[dev-dependencies]
kompari = { git = "https://github.com/linebender/kompari.git", rev = "4b851413e1b17307064aa48c50e59d7e29656543" }

[features]
default = []
vello_cpu = ["dep:imaging_vello_cpu"]
skia = ["dep:imaging_skia"]
vello_hybrid = ["dep:imaging_vello_hybrid", "dep:vello_hybrid"]
vello = ["dep:imaging_vello"]
