[package]
name = "imaging_tiny_skia"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "tiny-skia backend for the imaging command stream."
readme = "README.md"
publish = false

[features]
default = ["std"]
std = [
    "imaging/std",
    "peniko/std",
    "tiny-skia/std",
]
libm = [
    "imaging/libm",
    "peniko/libm",
    "tiny-skia/no-std-float",
]

[dependencies]
bytemuck = { default-features = false, version = "1.24" }
imaging = { workspace = true }
kurbo.workspace = true
peniko.workspace = true
rustc-hash = "2.1"
swash = "0.2"
tiny-skia = { version = "0.11", default-features = false, features = ["simd"] }

[lints]
workspace = true
