[package]
name = "imaging_vello"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Vello (GPU) backend for the imaging command stream."
readme = "README.md"
publish = false

[dependencies]
imaging = { features = ["std"], workspace = true }
kurbo = { default-features = true, workspace = true }
peniko = { default-features = true, workspace = true }
pollster = "0.4.0"
vello = { default-features = true, version = "0.8.0" }

[lints]
workspace = true
