[package]
name = "imaging_vello_hybrid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Vello hybrid (CPU/GPU via wgpu) backend for the imaging command stream."
readme = "README.md"
publish = false

[dependencies]
imaging = { features = ["std"], workspace = true }
kurbo = { default-features = true, workspace = true }
peniko = { default-features = true, workspace = true }
pollster = "0.4.0"
vello_common = { default-features = true, version = "0.0.6" }
vello_hybrid = { default-features = true, version = "0.0.6" }
wgpu = { default-features = false, features = [
    "std",
    "wgsl",
], version = "27.0.1" }

[lints]
workspace = true
