[package]
name = "svg_imaging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SVG parsing and rendering through imaging."
readme = "README.md"
keywords = ["svg", "graphics", "rendering", "imaging"]
categories = ["graphics", "rendering"]

[dependencies]
hashbrown.workspace = true
image = { default-features = false, features = ["gif", "jpeg", "png", "webp"], workspace = true }
imaging = { workspace = true }
kurbo = { default-features = true, workspace = true }
peniko = { default-features = true, workspace = true }
usvg.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["imaging/std"]
libm = ["imaging/libm"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
