[package]
name = "velato_imaging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Velato rendering through imaging."
readme = "README.md"
keywords = ["lottie", "animation", "rendering", "imaging"]
categories = ["graphics", "rendering"]

[dependencies]
imaging = { workspace = true }
kurbo = { default-features = true, workspace = true }
peniko = { default-features = true, workspace = true }
velato = { default-features = false, version = "0.9.0" }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
